# mini_lake

./: LICENSE  README.md  conftest.py  pyproject.toml  settings.toml
.github/workflows/: main.yaml
minilake/: api.py  app.py  cli.py  config.py  core.py  database.py  models.py  serializers.py
tests/functional/: test_functional_api.py  test_functional_cli.py
tests/unit/: test_unit_core.py
