[tool.poetry]
name = "minilake"
version = "0.1.0"
description = ""
authors = ["Rafael D Silva <neromad@outlook.com>"]
include = ["minilake/settings.toml"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
fastapi = "^0.75.2"
typer = "^0.4.1"
rich = "^12.2.0"
dynaconf = "^3.1.8"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
black = {version = "^22.3.0", allow-prereleases = true}
pytest = "^7.1.2"
flake8 = "^4.0.1"
requests = "^2.27.1"

[tool.poetry.scripts]
minilake = "minilake.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
